syntax = "proto2";

//do not change this properties
option java_package = "pl.edu.pwr.pwrinspace.poliwrocket.Model.MessageParser";
option java_outer_classname = "FrameProtos";

message LoRaFrame {
  // mcb frame
  required uint32 obc_state = 1;
  required uint32 dc_time = 2;
  required uint32 flight_time = 3;
  required float mcb_battery = 4;
  required float gps_lat = 5;
  required float gps_long = 6;
  required float gps_sat = 7;
  required float mcb_altitude = 8;
  required float mcb_velocity = 9;
  required int32 mcb_temperature = 10;
  required float euler_fi = 11;
  required float euler_psi = 12;
  required float euler_theta = 13;

  // recovery frame
  required uint32 recov_pressure_1 = 14;
  required uint32 recov_pressure_2 = 15;
  required fixed32 recov_byte_data = 16;

  // pitot frame
  required float pitot_battery = 17;
  required int32 pitot_altitude = 18;
  required int32 pitot_velocity = 19;
  required int32 pitot_temperature = 20;

  // main valve
  required float mval_battery = 21;
  required fixed32 mval_byte_data = 22;

  // vent valve
  required float vent_battery = 23;
  required float tank_pressure = 24;
  required fixed32 vent_byte_data = 25;

  // tanwa frame
  required float tanwa_battery = 26;
  required fixed32 tanwa_byte_data = 27;
  required uint32 tanwa_state = 28;
  required float rocket_weight = 29;
  required float tank_weight = 30;
  required float temperature_btl = 31;
  required float temperature_fill = 32;
  required float pre_fill_pressure = 33;
  required float post_fill_pressure = 34;
  required float btl_pressure = 35;

  required fixed32 esp_now_byte_data = 36;
  required fixed32 errors = 37;
}

message LoRaFrameTanwa {
  // tanwa frame

  required uint32 tanWaState = 1;
  required uint32 pressureSensor = 2;
  required uint32 solenoid_fill= 3;
  required uint32 solenoid_depr = 4;
  required bool abortButton = 5;
  required bool igniterContinouity_1 = 6;
  required bool igniterContinouity_2 = 7;
  required uint32 hxRequest_RCK = 8; // arduino string
  required uint32 hxRequest_TANK = 9; // arduino string
  required float vbat = 10;
  required uint32 motorState_1 = 11;
  required uint32 motorState_2 = 12;
  required uint32 motorState_3 = 13;
  required uint32 motorState_4 = 14;
  required uint32 rocketWeight_blink = 15;
  required float rocketWeight_temp = 16;
  required uint32 tankWeight_blink = 17;
  required float tankWeight_temp = 18;
  required float rocketWeight_val = 19;
  required float tankWeight_val = 20;
  required uint32 rocketWeightRaw_val = 21;
  required uint32 tankWeightRaw_val = 22;
  required bool interface_rck = 23;
  required bool interface_tank = 24;
  required bool interface_mcu = 25;
}

message LoRaSettings {
  required int32 lora_freq_khz = 1;
  required int32 lora_transmit_ms = 2;
  required int32 countdown_time = 3;
  required int32 ingition_time = 4;
  required uint32 flash_enable = 5;
  required uint32 buzzer_enable = 6;
}

message LoRaCommand {
  required uint32 lora_dev_id = 1;
  required uint32 sys_dev_id = 2;
  required uint32 command = 3;
  required int32 payload = 4;
}